--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.3",
-    "@angular/common": "11.2.3",
-    "@angular/core": "11.2.3",
-    "@angular/forms": "11.2.3",
-    "@angular/platform-browser": "11.2.3",
-    "@angular/platform-browser-dynamic": "11.2.3",
-    "@angular/router": "11.2.3",
-    "microsoft-adal-angular6": "^1.3.0",
+    "@angular/animations": "11.2.12",
+    "@angular/common": "11.2.12",
+    "@angular/core": "11.2.12",
+    "@angular/forms": "11.2.12",
+    "@angular/platform-browser": "11.2.12",
+    "@angular/platform-browser-dynamic": "11.2.12",
+    "@angular/router": "11.2.12",
     "@fortawesome/angular-fontawesome": "0.8.2",
     "@fortawesome/fontawesome-svg-core": "1.2.30",
     "@fortawesome/free-brands-svg-icons": "5.15.2",
@@ -28,21 +27,24 @@
     "@fortawesome/pro-light-svg-icons": "5.12.1",
     "@fortawesome/pro-regular-svg-icons": "5.12.1",
     "@fortawesome/pro-solid-svg-icons": "5.12.1",
-    "@ionic/angular": "5.5.4",
-    "bootstrap": "5.0.0-beta2",
-    "@ngrx/effects": "11.0.1",
-    "@ngrx/store": "11.0.1",
-    "ngrx-store-localstorage": "11.0.0",
+    "@ionic/angular": "5.6.4",
+    "@ngrx/effects": "11.1.0",
+    "@ngrx/store": "11.1.0",
+    "bootstrap": "5.0.0",
+    "c": "^1.1.1",
+    "date-fns": "2.21.1",
     "lodash-es": "4.17.21",
-    "rxjs": "6.6.6",
+    "microsoft-adal-angular6": "^1.3.0",
+    "ngrx-store-localstorage": "11.0.0",
+    "rxjs": "6.6.7",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.2",
+    "@angular-devkit/build-angular": "0.1102.11",
     "@angular/cli": "11.2.2",
-    "@angular/compiler": "11.2.3",
-    "@angular/compiler-cli": "11.2.3",
-    "@angular/language-service": "11.2.3",
+    "@angular/compiler": "11.2.12",
+    "@angular/compiler-cli": "11.2.12",
+    "@angular/language-service": "11.2.12",
     "@ionic/angular-toolkit": "~3.1.0",
     "@types/howler": "^2.2.1",
     "@types/jasmine": "~3.5.14",
@@ -57,7 +59,7 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~5.1.1",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
