--- a/package.json
+++ b/package.json
@@ -13,61 +13,113 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.12",
-    "@angular/common": "11.2.12",
-    "@angular/core": "11.2.12",
-    "@angular/forms": "11.2.12",
-    "@angular/platform-browser": "11.2.12",
-    "@angular/platform-browser-dynamic": "11.2.12",
-    "@angular/router": "11.2.12",
-    "@fortawesome/angular-fontawesome": "0.8.2",
-    "@fortawesome/fontawesome-svg-core": "1.2.30",
-    "@fortawesome/free-brands-svg-icons": "5.15.2",
+
+    "@angular/animations": "13.1.0",
+
+    "@angular/common": "13.1.0",
+
+    "@angular/core": "13.1.0",
+
+    "@angular/forms": "13.1.0",
+
+    "@angular/platform-browser": "13.1.0",
+
+    "@angular/platform-browser-dynamic": "13.1.0",
+
+    "@angular/router": "13.1.0",
+
+    "@fortawesome/angular-fontawesome": "0.10.1",
+
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+
+    "@fortawesome/free-brands-svg-icons": "5.15.4",
+
     "@fortawesome/pro-duotone-svg-icons": "5.12.1",
+
     "@fortawesome/pro-light-svg-icons": "5.12.1",
+
     "@fortawesome/pro-regular-svg-icons": "5.12.1",
+
     "@fortawesome/pro-solid-svg-icons": "5.12.1",
-    "@ionic/angular": "5.6.4",
-    "@ngrx/effects": "11.1.0",
-    "@ngrx/store": "11.1.0",
-    "bootstrap": "5.0.0",
-    "c": "^1.1.1",
+
+    "@ionic/angular": "5.9.2",
+
+    "@ngrx/effects": "13.0.1",
+
+    "@ngrx/store": "13.0.1",
+
+    "angular2-signaturepad": "3.0.4",
+
+    "bootstrap": "5.1.3",
+
     "date-fns": "2.21.1",
+
     "lodash-es": "4.17.21",
+
     "microsoft-adal-angular6": "^1.3.0",
-    "ngrx-store-localstorage": "11.0.0",
-    "rxjs": "6.6.7",
+
+    "ngrx-store-localstorage": "12.0.1",
+
+    "rxjs": "7.4.0",
+
+    "uuid": "8.3.2",
+
     "zone.js": "0.11.4"
+
   },
+
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.11",
-    "@angular/cli": "11.2.2",
-    "@angular/compiler": "11.2.12",
-    "@angular/compiler-cli": "11.2.12",
-    "@angular/language-service": "11.2.12",
+
+    "@angular-devkit/build-angular": "13.1.1",
+
+    "@angular/cli": "13.1.1",
+
+    "@angular/compiler": "13.1.0",
+
+    "@angular/compiler-cli": "13.1.0",
+
+    "@angular/language-service": "13.1.0",
+
     "@ionic/angular-toolkit": "~3.1.0",
+
     "@types/howler": "^2.2.1",
+
     "@types/jasmine": "~3.5.14",
+
     "@types/jasminewd2": "~2.0.8",
+
+    "@types/lodash-es": "^4.17.4",
+
     "@types/node": "^14.6.1",
-    "codelyzer": "^6.0.0",
+
+    "@types/uuid": "^8.3.0",
+
     "cordova-plugin-device": "^2.0.3",
+
     "cordova-plugin-ionic-keyboard": "^2.2.0",
+
     "cordova-plugin-ionic-webview": "^5.0.0",
+
     "cordova-plugin-splashscreen": "^6.0.0",
+
     "cordova-plugin-statusbar": "^2.4.3",
+
     "cordova-plugin-whitelist": "^1.3.4",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~6.3.2",
+
+    "jasmine-core": "~3.10.0",
+
+    "karma": "~6.3.0",
+
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "~7.0.0",
-    "ts-node": "~9.0.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.1.5"
+
+    "karma-coverage": "~2.0.3",
+
+    "karma-jasmine": "~4.0.0",
+
+    "karma-jasmine-html-reporter": "~1.7.0",
+
+    "typescript": "~4.5.4"
+
   },
   "cordova": {
     "plugins": {
